# MART-MANAGEMENT

./: README.md  main.py  pyproject.toml  requirements.txt
src/app/assets/: .env
src/app/database/: connectivity.py
src/app/models/: inventory.py  notification.py  order.py  user.py
src/app/routers/: __init__.py  inventory.py  main_routes.py  notification.py  order.py  user.py
src/app/schemas/: inventory.py  notification.py  order.py  user.py
src/app/streamlit_gui/: gui.py
src/app/utils/: auth.py
tests/: test_connection.py
